Add page_num and page_size to API responses for consistency
We are including these for some index endpoints but previously
werent for others.  This gets us consistent
